# auth_server_playground

./: .env  Cargo.toml  Makefile.toml  READMD.md
_entity/: Cargo.toml  Makefile.toml
_entity/src/: gender.rs  locale.rs  mod.rs  prelude.rs  temp_user.rs  user.rs  user_info.rs
_entity/src/hook/: mod.rs
_migration/: Cargo.toml  Makefile.toml
_migration/src/: lib.rs  m20220706_001937_init.rs
migration/: 20220624081052_1.down.sql  20220624081052_1.up.sql  20220712014532_todo.down.sql  99999999999999_update_at_hook.down.sql
migration/2022-07-05-100545_init/: down.sql  up.sql
migration/9999-01-01-000000_hook/: up.sql
migration/test/: t1.sql
src/: db.rs  main.rs  server.rs
src/config/: .test.toml  config.rs  constants.rs  env.rs  mod.rs
src/error/: app_error.rs  auth_error.rs  mod.rs
src/extractor/: auth_cookies_extract.rs  auth_user_extract.rs  mod.rs
src/handler/: auth_handler.rs  test_handler.rs
src/lib/: mod.rs
src/lib/cookie/: cookie_store.rs  cookies_test_store.rs  mod.rs
src/lib/jwt/: auth_claims.rs  auth_token_validation_error.rs  jwt_store.rs  mod.rs  test_jwt_store.rs  ts.rs
src/lib/oauth/google/: google_oauth_client.rs  google_token.rs  google_user_info.rs  mod.rs
src/model/: user_model.rs
src/repo/: _user_repo.rs  user_repo.rs
src/router/: auth_router.rs  mod.rs
src/util/: cookie.rs  inner_as_str.rs  mod.rs  path.rs  random.rs
