[package]
name = "migration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "^1", features = ["attributes", "tokio1"] }
sea-orm-migration = { version="0.8.3", features=[
    "runtime-tokio-native-tls",
    "sqlx-postgres",
]}
entity = {path="../entity"}